crates/sotf-plugins/tests/snapshots/render_plan_snapshots__loudness_compensation__loudness_compensation__desktop_600.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "loudness_compensation",
  "width": 600.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "column",
  "slider_height": 120.0,
  "show_visualizations": false,
  "columns_visible": [
    "main",
    "output"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "mode-selector",
    "LOW"
  ],
  "overflow_group_ids": [
    "LEVEL POLICY",
    "MID",
    "HIGH"
  ],
  "config_controls": [],
  "main_groups": [
    {
      "id": "mode-selector",
      "title": "",
      "controls": [
        {
          "param_index": 11,
          "param_name": "Mode",
          "control_type": "selector",
          "unit": "",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "LOW",
      "title": "LOW",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Low Freq",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            20.0,
            500.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 1,
          "param_name": "Low Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -20.0,
            20.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "LEVEL POLICY",
      "title": "LEVEL POLICY",
      "controls": [
        {
          "param_index": 16,
          "param_name": "Headroom Normalized",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "MID",
      "title": "MID",
      "controls": [
        {
          "param_index": 4,
          "param_name": "Mid Enabled",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 5,
          "param_name": "Mid Freq",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            500.0,
            8000.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 6,
          "param_name": "Mid Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -20.0,
            20.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 7,
          "param_name": "Mid Q",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.1,
            5.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "HIGH",
      "title": "HIGH",
      "controls": [
        {
          "param_index": 2,
          "param_name": "High Freq",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            2000.0,
            20000.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 3,
          "param_name": "High Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -20.0,
            20.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [
    {
      "param_index": 8,
      "param_name": "Auto Gain",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false,
      "enabled": true
    },
    {
      "param_index": 15,
      "param_name": "Auto Gain Position",
      "control_type": "selector",
      "unit": "",
      "range": [
        0.0,
        2.0
      ],
      "read_only": false,
      "enabled": true
    },
    {
      "param_index": 9,
      "param_name": "Max Auto Gain",
      "control_type": "knob",
      "unit": "dB",
      "range": [
        0.0,
        24.0
      ],
      "read_only": false,
      "enabled": true
    },
    {
      "param_index": 10,
      "param_name": "Smoothing",
      "control_type": "knob",
      "unit": "ms",
      "range": [
        1.0,
        1000.0
      ],
      "read_only": false,
      "enabled": true
    }
  ],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
